--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -13,8 +13,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
+    <script type="text/javascript" src="js/Google.js"></script>
+    <script type="text/javascript" src="js/Camera.js"></script>
+    <script type="text/javascript" src="js/Geolocation.js"></script>
+    <script type="text/javascript" src="js/Compass.js"></script>
+    <script type="text/javascript" src="js/Accelerometer.js"></script>
 
     <script src="lib/jquery/jquery-1.8.2.min.js"></script>
     <script src="cordova.js"></script>
@@ -25,6 +32,8 @@
         var myLat = 0, myLng = 0;
         var bearing, distance;
         var dataStatus = 0;
+        var latlng;
+
         // setup map and listen to deviceready
         $(document).ready(function () {
             document.addEventListener("deviceready", onDeviceReady, false);
@@ -41,13 +50,14 @@
             });
 
             //navigator.splashscreen.hide();
+
+            //Start Application
             cordova.plugin.pDialog.setMessage('Loading Camera...');
             startCamera();
 
             cordova.plugin.pDialog.setMessage('Loading Map...');
             setupMap();
 
-            // start cordova device sensors
             cordova.plugin.pDialog.setMessage('Loading Accelerometre...');
             startAccelerometer();
 
@@ -56,30 +66,9 @@
 
             cordova.plugin.pDialog.setMessage('Loading Geolocation...');
             startGeolocation();
-        }
 
-        function startCamera() {
-            ezar.initializeVideoOverlay(
-                function () {
-                    ezar.getBackCamera().start();
-                },
-                function (error) {
-                    alert("ezar initialization failed");
-                });
-        }
-        // setup google maps api
-        function setupMap() {
-            $("#map").height($(window).height() - 60);
-            var mapOptions = {
-                zoom: 13,
-                mapTypeControl: false,
-                streetViewControl: false,
-                navigationControl: true,
-                scrollwheel: false,
-                navigationControlOptions: { style: google.maps.NavigationControlStyle.SMALL },
-                mapTypeId: google.maps.MapTypeId.ROADMAP
-            };
-            map = new google.maps.Map(document.getElementById("map"), mapOptions);
+            /*cordova.plugin.pDialog.setMessage('Loading Data...');
+            StartData();*/
         }
 
         function toggleView() {
@@ -183,121 +172,6 @@
 
         }
 
-        // Start watching the geolocation
-        function startGeolocation() {
-            var options = { timeout: 30000 };
-            watchGeoID = navigator.geolocation.watchPosition(onGeoSuccess, onGeoError, options);
-        }
-
-        // Stop watching the geolocation
-        function stopGeolocation() {
-            if (watchGeoID) {
-                navigator.geolocation.clearWatch(watchGeoID);
-                watchGeoID = null;
-            }
-        }
-
-        // onSuccess: Get the current location
-        function onGeoSuccess(position) {
-            document.getElementById('geolocation').innerHTML = 'Latitude: ' + position.coords.latitude + '<br />' + 'Longitude: ' + position.coords.longitude;
-            myLat = position.coords.latitude;
-            myLng = position.coords.longitude;
-            cordova.plugin.pDialog.setProgress(60);
-
-            cordova.plugin.pDialog.setMessage('Loading Data...');
-            var latlng = new google.maps.LatLng(myLat, myLng);
-            var request = {
-                location: latlng,
-                radius: '500',
-                name: ['tabac']
-            };
-            var service = new google.maps.places.PlacesService(map);
-            service.search(request, callback);
-        }
-
-        function callback(results, status) {
-            // Modification du tableau
-            if (status == google.maps.places.PlacesServiceStatus.OK) {
-                pin = [];
-                $(".listItems").html("");
-                for (i = 0; i < results.length; i++) {
-                    //var place = result[i];
-                    var data = { "name": "" + results[i].name + "", "lat": "" + results[i].geometry.location.lat() + "", "lng": "" + results[i].geometry.location.lng() + "" };
-                    pin.push(data);
-                }
-                loadData();
-                // Fermeture fenetre de chargement
-                cordova.plugin.pDialog.dismiss();
-            }
-        }
-
-        // onError: Failed to get the location
-        function onGeoError() {
-            document.getElementById('log').innerHTML += "onError=.";
-        }
-
-        // Start watching the compass
-        function startCompass() {
-            var options = { frequency: 100 };
-            watchCompassID = navigator.compass.watchHeading(onCompassSuccess, onCompassError, options);
-        }
-        // Stop watching the compass
-        function stopCompass() {
-            if (watchCompassID) {
-                navigator.compass.clearWatch(watchCompassID);
-                watchCompassID = null;
-            }
-        }
-        // onSuccess: Get the current heading
-        function onCompassSuccess(heading) {
-            var directions = ['N', 'NE', 'E', 'SE', 'S', 'SO', 'O', 'NO', 'N'];
-            var direction = directions[Math.abs(parseInt((heading.magneticHeading) / 45) + 1)];
-            document.getElementById('compass').innerHTML = heading.magneticHeading + "<br>" + direction;
-            document.getElementById('direction').innerHTML = direction;
-            var degree = heading.magneticHeading;
-            if ($("#arView").is(":visible") && dataStatus != "loading") {
-                calculateDirection(degree);
-            }
-        }
-        // onError: Failed to get the heading
-        function onCompassError(compassError) {
-            document.getElementById('log').innerHTML += "onError=." + compassError.code;
-        }
-
-        // Start checking the accelerometer
-        function startAccelerometer() {
-            var options = { frequency: 100 };
-            watchAccelerometerID = navigator.accelerometer.watchAcceleration(onAccelerometerSuccess, onAccelerometerError, options);
-        }
-        // Stop checking the accelerometer
-        function stopAccelerometer() {
-            if (watchAccelerometerID) {
-                navigator.accelerometer.clearWatch(watchAccelerometerID);
-                watchAccelerometerID = null;
-            }
-        }
-        // onSuccess: Get current accelerometer values
-        function onAccelerometerSuccess(acceleration) {
-            // for debug purpose to print out accelerometer values
-            var element = document.getElementById('accelerometer');
-            element.innerHTML = 'Acceleration X: ' + acceleration.x + '<br />' +
-                'Acceleration Y: ' + acceleration.y + '<br />' +
-                'Acceleration Z: ' + acceleration.z;
-            if (acceleration.y > 7) {
-                $("#arView").fadeIn();
-                $("#topView").hide();
-                // document.getElementById('body').style.background = "#d22";
-                document.getElementById('body').style.background = "transparent";
-            } else {
-                $("#arView").hide();
-                $("#topView").fadeIn();
-                document.getElementById('body').style.background = "#fff";
-            }
-        }
-        // onError: Failed to get the acceleration
-        function onAccelerometerError() {
-            document.getElementById('log').innerHTML += "onError.";
-        }
         function doSnapshot() {
             //hide snapbtn so it will not be in snapshot image
             document.getElementById("snapbtn").style.display = "none";
@@ -318,170 +192,6 @@
             }, 10);
         }
     </script>
-    <style>
-        body {
-            background-color: transparent;
-            font-family: Arial;
-            margin: 0;
-            overflow-x: hidden;
-            -webkit-user-select: none;
-        }
-
-        .navbar {
-            background-color: #222;
-            height: 40px;
-            padding: 10px;
-            text-align: center;
-            color: #fff;
-            font-size: 20px;
-            font-weight: bold;
-            line-height: 40px;
-        }
-
-        .navtitle {
-            text-align: center;
-            margin: auto
-        }
-
-        .navbtn {
-            background-color: #333;
-            padding: 5px 10px;
-            height: 30px;
-            color: #fff;
-            font-size: 18px;
-            font-weight: bold;
-            line-height: 30px;
-            border-radius: 4px;
-            border: 1px solid #666
-        }
-
-        #actionbtn {
-            float: right;
-        }
-
-        #viewbtn {
-            float: left;
-        }
-
-        .query {
-            padding: 10px;
-            background-color: #aaa;
-            border-bottom: 1px solid #fff;
-            font-size: 14px;
-            font-weight: bold;
-            color: #222;
-        }
-
-        .item {
-            padding: 20px 10px;
-            background-color: #eee;
-            border-bottom: 1px solid #fff;
-            font-size: 18px;
-            color: #333;
-            text-shadow: 0 1px #fff
-        }
-
-        .searchbox {
-            padding: 5px;
-            background-color: #eee;
-            border-bottom: 1px solid #fff;
-        }
-
-        #search {
-            box-sizing: border-box;
-            width: 100%;
-            height: 40px;
-            font-size: 16px;
-            border-radius: 20px;
-            border: 1px solid #bbb
-        }
-
-        .mapView {
-            display: none
-        }
-
-        #map {
-            height: 200px;
-        }
-
-        #arView, #topView {
-            display: none;
-        }
-
-        #arView {
-            padding: 30px 0;
-            height: 70px;
-            text-align: center
-        }
-
-        .arMessage {
-            color: #ddd;
-            font-size: 14px
-        }
-
-        #spot {
-            text-align: center
-        }
-
-        .name, .distance {
-            text-shadow: 0 1px #666
-        }
-
-        .name {
-            padding: 15px;
-            font-weight: bold;
-            background-color: rgba(204,34,34,0.5);
-            border-radius: 40px;
-            margin-bottom: 10px
-        }
-
-        #direction {
-            color: #fff;
-            font-size: 20px;
-            padding: 15px;
-            font-weight: bold;
-            ;
-            background-color: #a22;
-            border-radius: 40px;
-            display: inline-block;
-            margin-bottom: 10px;
-            width: 40px;
-            line-height: 40px
-        }
-
-        .distance {
-            font-size: 14px;
-            font-weight: normal;
-        }
-
-        #debug {
-            border: 1px solid #999;
-            display: none
-        }
-
-        .heading {
-            background-color: #999;
-            color: #eee;
-            padding: 5px;
-        }
-
-        #compass, #accelerometer, #geolocation {
-            padding: 5px
-        }
-
-        .snap {
-            position: absolute;
-            right: 31px;
-            bottom: 26px;
-        }
-
-        .attributing {
-            color: rgb(255, 213, 0);
-            position: absolute;
-            right: 10px;
-            bottom: 10px;
-        }
-    </style>
 </head>
 <body id="body" style="background-color: transparent">
     <div id="arView" style="background-color: transparent">
