--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -71,7 +71,7 @@
             StartData();*/
         }
 
-        function toggleView() {
+        /*function toggleView() {
             if ($(".listView").is(":visible")) {
                 $(".listView").hide();
                 $("#map").height($(window).height() - 60);
@@ -190,7 +190,7 @@
                     { "saveToPhotoAlbum": true }
                 )
             }, 10);
-        }
+        }*/
     </script>
 </head>
 <body id="body" style="background-color: transparent">
