--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -221,6 +221,10 @@
         <div class="mapView">
             <div id="map"></div>
         </div>
+        <div class="SetupView">
+            <div class="Radius"></div>
+            <div class="Color"></div>
+        </div>
     </div>
     <div id="debug">
         <div class="heading">Geolocation</div>
