--- a/www/index.html
+++ b/www/index.html
@@ -70,6 +70,48 @@
             /*cordova.plugin.pDialog.setMessage('Loading Data...');
             StartData();*/
         }
+
+        function toggleView() {
+            if ($(".listView").is(":visible")) {
+                $(".listView").hide();
+                $("#map").height($(window).height() - 60);
+                $(".mapView").fadeIn(
+                    function () {
+                        google.maps.event.trigger(map, "resize");
+                        map.fitBounds(bounds);
+                    });
+                $("#viewbtn").html("List");
+            } else {
+                $(".mapView").hide();
+                $(".listView").fadeIn();
+                $("#viewbtn").html("Map");
+            }
+        }
+
+        /*function toggleView() {
+            if ($(".listView").is(":visible")) {
+                $(".listView").hide();
+                $(".SetupView").hide();
+                $("#map").height($(window).height() - 60);
+                $(".mapView").fadeIn(
+                    function () {
+                        google.maps.event.trigger(map, "resize");
+                        map.fitBounds(bounds);
+                });
+                $("#viewbtn").html("Setup");
+            }
+            else if ($(".mapView").is(":visible")) {
+                $(".mapView").hide();
+                $(".listView").hide();
+                $(".SetupView").fadeIn();
+                $("#viewbtn").html("List");
+            }
+            else {
+                $(".SetupView").hide();
+                $(".listView").fadeIn();
+                $("#viewbtn").html("Map");
+            }
+        }*/
     </script>
 </head>
 <body id="body" style="background-color: transparent">
@@ -99,10 +141,6 @@
         </div>
         <div class="mapView">
             <div id="map"></div>
-        </div>
-        <div class="SetupView">
-            <div class="Radius"></div>
-            <div class="Color"></div>
         </div>
     </div>
     <div id="debug">
